exports[`stopRequest reducer handles RECEIVE_CONFIRM (fromVehicle false) action 1`] = `
Object {
  "currentVehicle": Object {},
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "sentStoprequestFromStop": true,
  "startStop": Object {},
  "stops": Array [],
}
`;

exports[`stopRequest reducer handles RECEIVE_CONFIRM (fromVehicle true) action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "sentStoprequestFromVehicle": true,
  "startStop": null,
  "stops": Array [],
}
`;

exports[`stopRequest reducer handles RESET_STATE action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "startStop": null,
  "stops": Array [],
}
`;

exports[`stopRequest reducer handles SEND_STOPREQUEST (fromVehicle false) action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "startStop": null,
  "stops": Array [],
}
`;

exports[`stopRequest reducer handles SEND_STOPREQUEST (fromVehicle true) action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "startStop": null,
  "stops": Array [],
}
`;

exports[`stopRequest reducer handles SET_STOPREQUEST_REQUEST_ID_DESTINATION action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": 123,
  "isFetching": false,
  "isReady": false,
  "startStop": null,
  "stops": Array [],
}
`;

exports[`stopRequest reducer handles SET_STOPREQUEST_REQUEST_ID_FROM action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": 123,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "startStop": null,
  "stops": Array [],
}
`;

exports[`stopRequest reducer returns the same state on an unhandled action 1`] = `
Object {
  "currentVehicle": null,
  "destinationRequestId": null,
  "error": false,
  "fromRequestId": null,
  "isFetching": false,
  "isReady": false,
  "startStop": null,
  "stops": Array [],
}
`;
